Toggling "Sample as Lamp" changes light intensity #33868

Closed
opened 2013-01-14 00:25:38 +01:00 by Sebastian Michailidis · 5 comments

%%%--- Operating System, Graphics card ---
Windows 7, 64 bits, GTX 570 + GTX 580

- Blender version with error, and version that worked ---

Latest working version: Blender 2.65 r53517 Win64
Broken version: 2.65.8 r53760

- Short description of error ---

The world's light intensity changes significantly when toggling "Sample as Lamp" on and off. This is a GPU only issue. CPU rendering works fine. I have attached two Screenshots illustrating the effect.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Start a new file, setup world lighting and toggle "Sample as Lamp".
%%%

%%%--- Operating System, Graphics card --- Windows 7, 64 bits, GTX 570 + GTX 580 - Blender version with error, and version that worked --- Latest working version: Blender 2.65 r53517 Win64 Broken version: 2.65.8 r53760 - Short description of error --- The world's light intensity changes significantly when toggling "Sample as Lamp" on and off. This is a GPU only issue. CPU rendering works fine. I have attached two Screenshots illustrating the effect. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Start a new file, setup world lighting and toggle "Sample as Lamp". %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I had a little trouble attaching the files, so I just uploaded them: https://dl.dropbox.com/u/675429/130114_CyclesSampleAsLamp_GPUrender_LightIntensity.7z%%%

%%%I had a little trouble attaching the files, so I just uploaded them: https://dl.dropbox.com/u/675429/130114_CyclesSampleAsLamp_GPUrender_LightIntensity.7z%%%

%%%Brecht, could you please have a look on this report? :)%%%

%%%Brecht, could you please have a look on this report? :)%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33868
No description provided.