Fix #33868: cycles sample as lamp for world background not rendering with the correct intensity on the GPU.